# Svecica-Engine

./: CMakeLists.txt
platform/include/graphics/: mesh.hpp  shader.hpp  shader_utils.hpp  texture.hpp
platform/src/: main.cpp
platform/src/graphics/: mesh.cpp  shader.cpp  texture.cpp
resources/shaders/: frag.glsl  vert.glsl
